<resources>
    <string name="app_name">Stiki E-Appointment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda">Beranda</string>
    <string name="bimbingan">Bimbingan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="none">-</string>
    <string name="no_activity">Kegiatan tidak ditemukan</string>
    <string name="appointment_title">Jadwal Bimbingan</string>
    <string name="no_appointment">Jadwal tidak ditemukan</string>
    <string name="partisipan">Partisipan</string>
    <string name="kelola_logbook">Kelola Logbook</string>
    <string name="close_button">Close Button</string>
    <string name="tambah_bimbingan">Tambah Bimbingan</string>
    <string name="ganti_status">Ganti Status</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="masalah">Masalah</string>
    <string name="bukti">Bukti</string>
    <string name="komentar_pembimbing">Komentar pembimbing</string>
    <string name="tanggal">Tanggal</string>
    <string name="tambah_logbook">Tambah Logbook</string>
    <string name="jadwal_bimbingan_hari_ini">Jadwal Bimbingan Hari ini</string>
    <string name="websites_https_stiki_ac_id">Websites: https://stiki.ac.id</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="description_about">Applikasi pengajuan bimbingan skripsi online untuk mahasiswa dan dosen pembimbing</string>
    <string name="default_notification_channel_id">com.kalfian.stiki-e-appointment.default_channel_id</string>
    <string name="ubah_komentar">Ubah Komentar</string>
</resources>