<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.appointment.CreateAppointmentActivity">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_create_logbook"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/light_gray"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/header_container_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:src="@drawable/header_circle_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <include
                        layout="@layout/head_with_back"
                        android:id="@+id/nav"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                    <LinearLayout
                        android:paddingTop="32dp"
                        android:paddingBottom="32dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:layout_margin="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_white"
                        android:orientation="vertical"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_marginBottom="16dp"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_marginBottom="8dp"
                                android:layout_width="match_parent"
                                android:fontFamily="@font/ubuntu_medium"
                                android:textColor="@color/blue"
                                android:textSize="16sp"
                                android:layout_height="wrap_content"
                                android:labelFor="@+id/logbook_date"
                                android:text="@string/tanggal" />


                            <EditText
                                android:id="@+id/logbook_date"
                                android:inputType="date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/input_round"
                                android:drawablePadding="16dp"
                                android:ems="10"
                                android:focusable="false"
                                android:clickable="true"
                                android:focusableInTouchMode="false"
                                android:padding="16dp" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_marginBottom="16dp"
                            android:layout_height="wrap_content">

                            <TextView
                                android:labelFor="@+id/logbook_description"
                                android:layout_marginBottom="8dp"
                                android:layout_width="match_parent"
                                android:fontFamily="@font/ubuntu_medium"
                                android:textColor="@color/blue"
                                android:textSize="16sp"
                                android:layout_height="wrap_content"
                                android:text="@string/kegiatan" />


                            <EditText
                                android:id="@+id/logbook_description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:minLines="6"
                                android:background="@drawable/input_round"
                                android:drawablePadding="16dp"
                                android:ems="10"
                                android:gravity="start"
                                android:inputType="textMultiLine"
                                android:padding="16dp" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_marginBottom="16dp"
                            android:layout_height="wrap_content">

                            <TextView
                                android:labelFor="@+id/logbook_problem"
                                android:layout_marginBottom="8dp"
                                android:layout_width="match_parent"
                                android:fontFamily="@font/ubuntu_medium"
                                android:textColor="@color/blue"
                                android:textSize="16sp"
                                android:layout_height="wrap_content"
                                android:text="@string/masalah" />


                            <EditText
                                android:id="@+id/logbook_problem"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:minLines="1"
                                android:background="@drawable/input_round"
                                android:drawablePadding="16dp"
                                android:ems="10"
                                android:gravity="start"
                                android:inputType="textMultiLine"
                                android:padding="16dp" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_marginBottom="16dp"
                            android:layout_height="wrap_content">

                            <TextView
                                android:labelFor="@+id/logbook_proof"
                                android:layout_marginBottom="8dp"
                                android:layout_width="match_parent"
                                android:fontFamily="@font/ubuntu_medium"
                                android:textColor="@color/blue"
                                android:textSize="16sp"
                                android:layout_height="wrap_content"
                                android:text="@string/bukti" />


                            <EditText
                                android:id="@+id/logbook_proof"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:minLines="1"
                                android:background="@drawable/input_round"
                                android:drawablePadding="16dp"
                                android:ems="10"
                                android:gravity="start"
                                android:inputType="textMultiLine"
                                android:padding="16dp" />
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_create_logbook"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_round_yellow"
                        app:backgroundTint="@null"
                        android:padding="6dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/tambah_logbook"
                        android:textAllCaps="false"
                        android:textColor="@color/dark_blue" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>