<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".modules.activity.DetailActivityActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_detail_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/header_container_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:src="@drawable/header_circle_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <include
                        layout="@layout/head_with_back"
                        android:id="@+id/nav"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                    <LinearLayout
                        android:paddingTop="32dp"
                        android:paddingBottom="32dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:layout_margin="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_white"
                        android:orientation="vertical"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/activity_banner"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:layout_height="150dp"
                            android:src="@drawable/noimage" />

                        <TextView
                            android:id="@+id/activity_title"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="4dp"
                            android:layout_width="wrap_content"
                            android:fontFamily="@font/ubuntu_medium"
                            android:textColor="@color/blue"
                            android:textSize="16sp"
                            android:layout_height="wrap_content"
                            android:text="@string/none" />

                        <TextView
                            android:id="@+id/activity_location"
                            android:layout_marginBottom="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gray"
                            android:fontFamily="@font/ubuntu_regular"
                            android:text="@string/none" />
                        <TextView
                            android:id="@+id/activity_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blue"
                            android:fontFamily="@font/ubuntu_regular"
                            android:text="@string/none" />
                    </LinearLayout>

                    <LinearLayout
                        android:paddingTop="32dp"
                        android:paddingBottom="32dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_white"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                        <TextView
                            android:id="@+id/activity_description"
                            android:layout_marginBottom="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gray"
                            android:fontFamily="@font/ubuntu_regular"
                            android:text="@string/none" />

                    </LinearLayout>

                    <LinearLayout
                        android:paddingTop="32dp"
                        android:paddingBottom="32dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:layout_margin="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_white"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/blue"
                                android:fontFamily="@font/ubuntu_bold"
                                android:text="@string/partisipan" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recycler_list_participant"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp" />


                    </LinearLayout>

                    <Button
                        android:layout_marginBottom="@dimen/dimen_16"
                        android:id="@+id/btn_go_logbook"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_round_yellow"
                        app:backgroundTint="@null"
                        android:padding="6dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/kelola_logbook"
                        android:textAllCaps="false"
                        android:textColor="@color/dark_blue" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>